--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -42,6 +42,12 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  margin-top: 0;
+  font-size: 4rem;
+  letter-spacing: -0.1rem;
+  line-height: 1.25;
 }
 @media (max-width: 600px) {
   .PageHeader--Subtitle {
